fix: btn color in dark mode

--- a/src/styles/mixins/btn.scss
+++ b/src/styles/mixins/btn.scss
@@ -11,6 +11,7 @@
   background: var(--btn-bg);
   text-transform: lowercase;
   box-sizing: border-box;
+  color: var(--c-fg);
 
   &:hover {
     opacity: 1;
